--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">AndroidComposeStudyDemo</string>
     <string name="title_activity_basis_study">BasisStudyActivity</string>
     <string name="title_activity_layout_study">LayoutStudyActivity</string>
+    <string name="title_activity_custom_layout_study">CustomLayoutStudyActivity</string>
 </resources>
